머지 중 레이아웃 정렬 충돌 수정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -86,7 +86,7 @@
             </form>
         </div>
 
-        <div class="flex gap-3 hidden xl:flex">
+        <div class="flex gap-3 hidden xl:flex items-center">
             <a href="/member/login" class="inline-flex flex-shrink-0" sec:authorize="isAnonymous()">
                 <span class="ml-[2px]">
                     로그인
@@ -110,11 +110,9 @@
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                      th:unless="${#authentication.principal.imgFilePath}"/>
-
                 <span class="ml-[2px]">
                 </span>
-                <span class="ml-[2px]">
-                   00회원
+                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}" th:text="${#authentication.principal.nickName + ' 님'}">
                 </span>
             </a>
 
@@ -135,7 +133,6 @@
                     장바구니
                 </span>
             </a>
-
         </div>
     </div>
 </header>
@@ -176,8 +173,6 @@
         }
         return true;
     }
-
-
 </script>
 </body>
 </html>
