레이아웃 footer 수정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -141,24 +141,72 @@
     <main layout:fragment="content" class="flex-grow flex flex-col"></main>
 </div>
 
-<footer class="border-t-[1px] border-t-[color:#efefef] py-3 text-[color:#777] text-[14px] mt-5">
-    <div class="container mx-auto flex flex-col gap-1 px-2">
-        <div>
-            <a href="/">
-                <span>사업자정보확인</span>
-                <span class="inline-block scale-[.7]">▼</span>
-            </a>
-        </div>
+<footer class="bg-black py-16 text-top mt-32">
+    <div class="max-w-7xl mx-auto">
+        <nav class="flex flex-col md:flex-row md:justify-between">
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>고우영</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>Front/React</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>고우영</span>
+                    </div>
+                </div>
+            </div>
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                </div>
+            </div>
 
-        <div class="flex gap-3">
-            <a href="/">이용약관</a>
-            <a href="/">개인정보 처리방침</a>
-            <a href="/">청소년보호정책</a>
-        </div>
-
-        <div>
-            <a href="/">©BOOKU_LUV Corp.</a>
-        </div>
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <br>
+        <hr class="w-95">
+        <div class="text-white font-bold text-3xl pt-5">Book U Luv</div>
+        <div class="text-white font-bold text-2xl pt-5">책 구매를 하여 책을 읽어 봅시다!</div>
     </div>
 </footer>
 
