--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -34,6 +34,7 @@
                 }
             }
         };
+
     </script>
 </head>
 
@@ -53,13 +54,13 @@
                 <span class="ml-[2px] hidden lg:block">U_LUV</span>
             </a>
             <div class="xl:flex gap-3 ml-[50px] font-bold">
-                <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{/product/domestic/list}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block ">
                         국내도서
                     </span>
                 </a>
 
-                <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{/product/foreign/list}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
                         외국도서
                     </span>
@@ -107,8 +108,11 @@
             </a>
 
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
-                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
+                     th:if="${#authentication.principal.imgFilePath}"
+                     th:src="${#authentication.principal.imgFilePath}"/>
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
+                     src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                      th:unless="${#authentication.principal.imgFilePath}"/>
 
                 <span class="ml-[2px]">
@@ -144,24 +148,72 @@
     <main layout:fragment="content" class="flex-grow flex flex-col"></main>
 </div>
 
-<footer class="border-t-[1px] border-t-[color:#efefef] py-3 text-[color:#777] text-[14px] mt-5">
-    <div class="container mx-auto flex flex-col gap-1 px-2">
-        <div>
-            <a href="/">
-                <span>사업자정보확인</span>
-                <span class="inline-block scale-[.7]">▼</span>
-            </a>
-        </div>
+<footer class="bg-black py-16 text-top mt-32">
+    <div class="max-w-7xl mx-auto">
+        <nav class="flex flex-col md:flex-row md:justify-between">
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>고우영</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>Front/React</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>고우영</span>
+                    </div>
+                </div>
+            </div>
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>박창규</span>
+                    </div>
+                </div>
+            </div>
 
-        <div class="flex gap-3">
-            <a href="/">이용약관</a>
-            <a href="/">개인정보 처리방침</a>
-            <a href="/">청소년보호정책</a>
-        </div>
-
-        <div>
-            <a href="/">©BOOKU_LUV Corp.</a>
-        </div>
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+                <div>
+                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png"  alt="">
+                </div>
+                <div class="ml-[20px]">
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>이메일 : wooyoung0407@naver.com</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                    <div class="mb-[10px]">
+                        <span>황인성</span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <br>
+        <hr class="w-95">
+        <div class="text-white font-bold text-3xl pt-5">Book U Luv</div>
+        <div class="text-white font-bold text-2xl pt-5">책 구매를 하여 책을 읽어 봅시다!</div>
     </div>
 </footer>
 
@@ -176,6 +228,7 @@
         }
         return true;
     }
+
 
 
 </script>
